--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,7 +4,6 @@ html, body {
     padding: 0;
     margin: 0;
     font-family: 'Garamond', 'Arial Narrow', Arial, sans-serif;
-
 }
 
 #sidebar {
@@ -20,6 +19,19 @@ html, body {
     box-shadow: 5px 0px 10px black;
 }
 
+#sidebar > h1 {
+    font-size: 2em;
+}
+
+#sidebar > a {
+    text-decoration: none;
+    color: #d3d3d3;
+}
+
+#sidebar > h2 {
+    font-size: 1.2em;
+}
+
 #sidebar ul {
     margin: 0;
     padding: 0;
@@ -30,10 +42,10 @@ html, body {
     margin: 20px;
 }
 
-#sidebar a {
+#sidebar ul li a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 1.5em;
     color: lightgray;
 }
 
@@ -54,10 +66,11 @@ main {
     height: 300px;
 }
 
-#missionStatement h1 {
-    font-weight: normal;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding: 80px;
+#missionStatement h2 {
+    font-size: 2em;
+    font-family: 'Heebo', Arial, sans-serif;
+    font-weight: 700;
+    padding: 70px;
     margin: 0;
 }
 
@@ -68,38 +81,40 @@ main {
 
 #span2 {
     background-color: #f20000;
-    padding: 5px;
+    padding: .2em;
 }
 
-#articles h1 {
+#articles h2 {
     margin: 0px;
     background-color: black;
-    color: lightgray;
+    color: #d3d3d3;
     font-weight: normal;
     padding: 20px;
-    font-size: 40px;
+    font-size: 2.5em;
 }
 
 #articles {
-    background-color:gainsboro;
+    background-color:#dcdcdc;
     padding-bottom: 1px;
 }
 
 #articles p {
-    font-family: 'Garamond', 'Arial Narrow', Arial, sans-serif;
     font-size: 30px;
     font-weight: normal;
     margin: 20px 20px 20px 30px; 
     line-height: 1.4;
+    width: 95%;
 }
 
 #articles h3 {
-    font-family: 'Garamond', 'Arial Narrow', Arial, sans-serif;
-    color: darkslategrey;
-    font-size: 35px;
+    color: #2f4f4f;
+    font-size: 2.3em;
     margin: 20px 0px 0px 30px;
     font-weight: normal;
+    width: 95%;
 }
+
+/* Continue reviewing CSS here */
 
 #v1 {
     border-left: 20px solid darkslategrey;
