--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,6 +6,8 @@ html, body {
     font-family: 'Garamond', 'Arial Narrow', Arial, sans-serif;
 }
 
+/* Sidebar */
+
 #sidebar {
     height: 100%;
     width: 250px;
@@ -39,19 +41,30 @@ html, body {
 
 #sidebar ul li{
     list-style-type: none;
-    margin: 20px;
+    margin: 20px 0 20px 0;
+    transition: background-color .25s linear;
+    transition: border-left .25s linear;
+}
+
+#sidebar ul li:hover {
+    background-color: #8080802d;
+    border-left: 5px solid white;
 }
 
 #sidebar ul li a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 1.5em;
-    color: lightgray;
+    color: #d3d3d3;
+    display: block;
+    transition: color .25s linear;
 }
 
 #sidebar a:hover {
     color: white;
 }
+
+/* Main */
 
 main {
     margin: 0;
@@ -59,6 +72,8 @@ main {
     margin-left: 250px;
     height: 100%;
 }
+
+/* Mission statement */
 
 #missionStatement {
     background: url("images/SkyCity.jpg") no-repeat;
@@ -83,6 +98,8 @@ main {
     background-color: #f20000;
     padding: .2em;
 }
+
+/* Articles */
 
 #articles h2 {
     margin: 0px;
@@ -121,7 +138,7 @@ main {
     margin-left: 0px;
 }
 
-/* Continue reviewing CSS here, maybe add some comments*/
+/* Skills */
 
 #skillsContent > span {
     display: inline-block;
@@ -131,12 +148,29 @@ main {
 
 .skillsIcon {
     font-size: 70px;
-    color: #26013B;
 }
 
 #skillsContent > span > p {
     margin: 0;
 }
+
+.fa-html5 {
+    color: #E34C26;
+}
+
+.fa-css3-alt {
+    color: #1673B6;
+}
+
+.fa-js-square {
+    color: #D4B830;
+}
+
+.fa-github {
+    color: #171515;
+}
+
+/* Education */
 
 #matc {
     background-color: white;
@@ -161,9 +195,10 @@ main {
     font-size: 20px;
 }
 
+/* Contact */
+
 #contactContent section {
     margin: 20px;
-    font-family: 'Garamond', 'Arial Narrow', Arial, sans-serif;
 }
 
 #contactContent section a {
@@ -171,15 +206,14 @@ main {
 }
 
 .iconText{
-    text-decoration: none;
     color: #2f4f4f;
     padding-bottom: 5px;
-    border-bottom: 3px solid gainsboro;
+    border-bottom: 3px solid #dcdcdc;
     transition: border-color .25s linear;
 }
 
 .iconText:hover {
-    border-bottom: 3px solid darkslategray;
+    border-bottom: 3px solid #2f4f4f;
 }
 
 .icon, .iconText {
@@ -193,6 +227,8 @@ main {
     font-size: 50px;
     color: #493327;
 }
+
+/* Resume */
 
 #resumeContent section {
     margin: 20px;
