--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,25 +3,19 @@ html, body {
     overflow-x: hidden;
     padding: 0;
     margin: 0;
-    /* font-family: 'Garamond', 'Arial Narrow', Arial, sans-serif; */
 }
 
 /* Main */
-
 main {
     margin: 0;
     padding: 0;
     margin-left: 250px;
-    /* mmargin-left: 250px; FOR OLD SIDEBAR */
     height: 100%;
 }
 
 /* Mission statement */
-
 #missionStatement {
-    background: url("images/SkyCity.jpg") no-repeat;
-    background-size: 100%;  
-    height: 300px;
+    background-color: #E5E7E6;
 }
 
 #missionStatement h2 {
@@ -34,19 +28,16 @@ main {
 
 #span1 {
     text-decoration: underline;
-    /* text-decoration-color: #52489C; */
-    text-decoration-color: #2941AB;
-
+    text-decoration-color: #a50f0f;
 }
 
 #span2 {
-    background-color: #2941AB;    
+    background-color: #a50f0f;
     color: #ffffff;
     padding: .2em;
 }
 
 /* Articles */
-
 #articles h2 {
     margin: 0px;
     background-color: black;
@@ -57,7 +48,6 @@ main {
 }
 
 #articles {
-    /* background-color:#dcdcdc; */
     background-color: #E5E7E6;
     padding-bottom: 1px;
 }
@@ -71,8 +61,8 @@ main {
 }
 
 #articles h3 {
-    /* color: #52489C; */
     color: #2941AB;
+    /* color: rgb(33, 16, 80); */
     font-size: 2.3em;
     margin: 20px 0px 0px 30px;
     font-weight: normal;
@@ -81,9 +71,8 @@ main {
 
 /* About */
 #v1 {
-    /* border-left: 20px solid #2f4f4f;     */
     border-left: 20px solid #2941AB;    
-    /* border-left: 20px solid #52489C; */
+    /* border-left: 20px solid rgb(33, 16, 80);     */
     height: 100px;
     position: absolute;
     margin-left: 0px;
@@ -94,13 +83,13 @@ main {
     display: flex;
 }
 
-.project {
-    min-height: 400px;
+.card {
+    margin: 20px;
+    box-shadow: 5px 5px 5px #B7B5B3;
 }
 
 .cardTitle {
-    color: #52489C;
-    /* color: #D81E5B; */
+    color: #2941AB;
 }
 
 .cardText {
@@ -109,12 +98,10 @@ main {
 }
 
 .myButton {
-    /* background-color: #D81E5B !important; */
-    background-color: #52489C !important;
+    background-color: #2941AB !important;
 }
 
 /* Skills */
-
 #skillsContent > span {
     display: inline-block;
     text-align: center;
@@ -150,7 +137,6 @@ main {
 }
 
 /* Education */
-
 #matc {
     background-color: white;
     width: 600px;
@@ -158,8 +144,7 @@ main {
     margin: 30px;
     padding: 5px;
     box-shadow: 5px 5px 5px #B7B5B3;
-    /* border-top: 5px solid #52489C;
-    border-left: 5px solid #52489C; */
+    border-radius: 5px;
     border-top: 5px solid #2941AB;
     border-left: 5px solid #2941AB;
 }
@@ -177,7 +162,6 @@ main {
 }
 
 /* Contact */
-
 #contactContent section {
     margin: 20px;
 }
@@ -187,8 +171,6 @@ main {
 }
 
 .iconText{
-    /* color: #2f4f4f; */
-    /* color: #52489C; */
     color: #2941AB;
     padding-bottom: 5px;
     border-bottom: 3px solid #dcdcdc;
@@ -196,7 +178,6 @@ main {
 }
 
 .iconText:hover {
-    /* border-bottom: 3px solid #52489C; */
     border-bottom: 3px solid #2941AB;
 }
 
@@ -221,53 +202,142 @@ main {
     text-decoration: none;
 }
 
-/* Boostrap sidebar */
-#sidebarB {
+/* Responsive sidebar */
+#mainNav {
     position: fixed;
-    min-width: 250px;
-    max-width: 250px;
-    min-height: 100vh;
+    /* background: #5e1a1a; */
+    /* background-color: #211050; */
     /* background: #111; */
-    background-color: black;
+    background-color: #21253b;
     color: #d3d3d3;
+    z-index: 1;
+}
+#mainNav a{
+    text-decoration: none;
 }
 
-#sidebarB .sidebar-header {
+#mainNav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.checkbtn {
+    font-size: 2em;
+    line-height: 80px;
+    cursor: pointer;
+    display: none;
+}
+
+#check {
+    display: none;
+}
+
+.sidebar-header {
     padding: 20px;
 }
 
 .sidebar-header h3 {
-    color: #ffffff;
-}
-
-.sidebar-header p {
     color: #FFFFFF;
 }
 
-#sidebarB ul.components {
-    /* border-bottom: 1px solid #52489C; */
+#mainNav ul {
     border-bottom: 1px solid #2941AB;
 }
 
-#sidebarB ul li a {
+#mainNav ul li a {
     padding: 10px;
     font-size: 1.1em;
     display: block;
-}
-
-#sidebarB a {
-    text-decoration: none;
-    color: #B7B5B3;
-}
-
-#sidebarB ul li a{
-    margin: 20px 0 20px 0;
     border-left: 0px solid white;
     transition: .25s linear;
+    padding-left: 20px;
 }
 
-#sidebarB li a:hover {
+#mainNav ul li a:hover {
     border-left: 5px solid white;
     background-color: #8080802d;
     color: white;
 }
+
+#mainNav a {
+    text-decoration: none;
+    color: #B7B5B3;
+}
+
+#closeBtn {
+    position: absolute;
+    left: 200px;
+    top: 320px;
+    color: #B7B5B3;
+    transition: .25s linear;
+}
+
+#closeBtn:hover {
+    color: #A50F0F;
+}
+
+@media (min-width: 950px) {
+    #mainNav {
+        min-width: 250px;
+        max-width: 250px;
+        min-height: 100vh;
+        box-shadow: 5px 0px 5px black;
+    }
+}
+
+@media (max-width: 950px) {
+    :target::before {
+        content: "";
+        display: block;
+        height: 100px; /* fixed header height*/
+        margin: -100px 0 0; /* negative fixed header height */
+      }
+    #mainNav {
+        position: fixed;
+        width: 100%;
+        height: 100px;
+        text-align: center;
+        background: #21253b;
+        /* background-color: rgb(33, 37, 59); */
+        box-shadow: 0px 5px 5px black;
+
+    }
+    .sidebar-header {
+        display: inline-block;
+    }
+    .checkbtn {
+        display: inline-block;
+        position: absolute;
+        left: 20px;
+        top: 10px;
+        color: white;
+    }
+    #mainNav ul {
+        position: fixed;
+        width: 250px;
+        height: 100vh;
+        background-color: #111;
+        top: 0px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    #mainNav li:last-child {
+        border-bottom: 1px solid #2941AB;
+
+    }
+    #mainNav ul li a {
+        display: block;
+        padding: 15px;
+    }
+    #check:checked ~ ul {
+        left: 0;
+    }
+    main {
+        margin: 100px 0 0 0;
+    }
+}
+
+
+
+
