--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,5 @@
+/* Make all text 24px, headers 32px */
+
 :root {
     --almostBlack: #111;
     /* --themeColor: #2941AB; */
@@ -42,12 +44,13 @@ main {
 }
 
 #missionStatement h2 {
-    font-size: 2em;
+    font-size: 32px;
     font-family: 'Heebo', Arial, sans-serif;
     font-weight: 700;
     padding: 30px;
     margin: 0;
     display: inline-block;
+    line-height: 50px;
 }
 
 #span1 {
@@ -69,7 +72,7 @@ main {
     color: #d3d3d3;
     font-weight: normal;
     padding: 20px;
-    font-size: 2.5em;
+    font-size: 32px;
 }
 
 #articles {
@@ -79,28 +82,29 @@ main {
 }
 
 #articles p {
-    font-size: 30px;
+    font-size: 24px;
     font-weight: normal;
-    margin: 20px 20px 20px 30px; 
     line-height: 1.4;
-    width: 95%;
+    margin: 20px;
+    /* width: 95%; */
 }
 
 #articles h3 {
     color: var(--themeColor);
     /* color: rgb(33, 16, 80); */
-    font-size: 2.3em;
-    margin: 20px 0px 0px 30px;
+    font-size: 32px;
+    /* margin: 20px 0px 0px 30px; */
     font-weight: normal;
-    width: 95%;
+    /* width: 95%; */
 }
 
 /* About */
 #v1 {
     border-left: 20px solid var(--themeColor);    
     /* border-left: 20px solid rgb(33, 16, 80);     */
-    height: 100px;
-    position: absolute;
+    /* height: 102px; */
+    padding: 9px;
+    /* position: absolute; */
     margin-left: 0px;
 }
 
@@ -111,36 +115,55 @@ main {
 
 .card {
     margin: 20px;
-    /* box-shadow: 5px 5px 5px #B7B5B3; */
     background-color: var(--almostBlack);
+    width: 30%;
 }
 
 .cardTitle {
     color: var(--themeColor);
+    font-size: 16px;
 }
 
 .cardText {
-    font-size: 1em !important;
+    font-size: 16px !important;
     margin: 0 0 10px 0 !important;
 }
 
 .myButton {
     background-color: var(--themeColor) !important;
+    font-size: 16px;
 }
 
 /* Skills */
-#skillsContent > span {
-    display: inline-block;
+#skillsDiv {
+    display: flex;
+    /* flex-wrap: wrap; */
+    background-color: #111111;
+    margin: 20px;
+    padding: 10px;
+    width: 80%;
+    flex-flow: row wrap;
+
+    /* justify-content:center; */
+    /* align-items:center; */
+}
+
+#skillsDiv > span {
+    /* display: inline-block; */
+    /* text-align: center; */
+    /* margin: 20px 10px 20px 20px; */
+    flex: 1;
     text-align: center;
-    margin: 20px 10px 20px 20px;
+    margin: 10px;
 }
 
 .skillsIcon {
     font-size: 70px;
 }
 
-#skillsContent > span > p {
+#skillsDiv > span > p {
     margin: 0;
+    font-size: 24px;
 }
 
 .fa-html5 {
@@ -156,7 +179,7 @@ main {
 }
 
 .fa-github {
-    color: #171515;
+    color: white;
 }
 
 .fa-bootstrap {
@@ -166,9 +189,9 @@ main {
 /* Education */
 #matc {
     background-color: var(--almostBlack);
-    width: 600px;
-    height: 200px;
-    margin: 30px;
+    width: 500px;
+    /* height: 200px; */
+    margin: 20px;
     padding: 5px;
     /* box-shadow: 5px 5px 5px #B7B5B3; */
     border-radius: 5px;
@@ -177,15 +200,16 @@ main {
 }
 
 #matc h3 {
-    font-size: 25px;
+    font-size: 24px;
+    padding: 10px;
 }
 
 #matc p {
-    font-size: 20px;
+    font-size: 16px;
 }
 
 #matc li {
-    font-size: 20px;
+    font-size: 16px;
 }
 
 /* Contact */
@@ -210,13 +234,13 @@ main {
 
 .icon, .iconText {
     line-height: 30px;
-    font-size: 20px;
+    font-size: 16px;
     margin: 0 10px 0 0;
 }
 
 .icon {
     vertical-align: middle;
-    font-size: 50px;
+    font-size: 40px;
     color: var(--themeColor);
 }
 
@@ -259,12 +283,17 @@ main {
     display: none;
 }
 
+.sidebar-header p {
+    font-size: 16px;
+}
+
 .sidebar-header {
     padding: 20px;
 }
 
 .sidebar-header h3 {
     color: #FFFFFF;
+    font-size: 32px;
 }
 
 #mainNav ul {
@@ -273,7 +302,6 @@ main {
 
 #mainNav ul li a {
     padding: 10px;
-    font-size: 1.1em;
     display: block;
     border-left: 0px solid white;
     transition: .25s linear;
@@ -289,6 +317,11 @@ main {
 #mainNav a {
     text-decoration: none;
     color: #B7B5B3;
+}
+
+#mainNav li>a {
+    font-size: 16px;
+
 }
 
 #closeBtn {
@@ -308,7 +341,6 @@ main {
         min-width: 250px;
         max-width: 250px;
         min-height: 100vh;
-        /* box-shadow: 5px 0px 5px black; */
     }
 }
 
@@ -316,16 +348,22 @@ main {
     :target::before {
         content: "";
         display: block;
-        height: 100px; /* fixed header height*/
-        margin: -100px 0 0; /* negative fixed header height */
+        height: 100px; 
+        margin: -100px 0 0; 
       }
     #mainNav {
         position: fixed;
         width: 100%;
         height: 100px;
         text-align: center;
-        background-color: #525E65;
-        /* box-shadow: 0px 5px 5px black; */
+        background-color: var(--almostBlack);
+        border-bottom: 1px solid white
+    }
+    #mainNav h3 {
+        font-size: 32px;
+    }
+    #mainNav p {
+        font-size: 16px;
     }
     .sidebar-header {
         display: inline-block;
@@ -344,6 +382,7 @@ main {
         background-color: var(--almostBlack);
         top: 0px;
         left: -100%;
+        opacity: .96;
         text-align: center;
         transition: all .5s;
     }
@@ -360,6 +399,36 @@ main {
     }
     main {
         margin: 100px 0 0 0;
+    }
+    @media (max-width: 700px) {
+        #missionStatement img {
+            width: 100%;
+        }
+        #articles h3 {
+            font-size: 24px;
+        }
+        #projects {
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        .card {
+            width: 90%;
+            flex: 1;
+            min-width: 215px;
+        }
+        #skillsDiv {
+            margin: 20px auto;
+            flex-direction: column;
+        }
+        #contactContent a {
+            display: block;
+        }
+        #matc {
+            min-width: 220px;
+            width: 80%;
+            margin: 20px auto;
+        }
     }
 }
 
