--- a/assets/styles.css
+++ b/assets/styles.css
@@ -138,7 +138,7 @@ main {
 #skillsDiv {
     display: flex;
     /* flex-wrap: wrap; */
-    background-color: #111111;
+    /* background-color: #111111; */
     margin: 20px;
     padding: 10px;
     width: 80%;
